--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "luxon": "^3.4.4",
     "markdown-it": "^14.0.0",
     "markdown-it-anchor": "^8.6.7"
+  },
+  "dependencies": {
+    "markdown-it-sub": "^2.0.0"
   }
 }
